--- a/home/index.html
+++ b/home/index.html
@@ -24,16 +24,19 @@
             <img class="enterprise-logo" src="https://cms.nhl.bamgrid.com/images/photos/298719018/150x56/cut.png">
     </header>
 
-    <main class="main">
-
-        
-            <div class="" id="goaliePlayers">
-                <h2 class="position-header">Goalie</h2>
+    <main class="main">       
+            <div id="goaliePlayers">
+                <h2 class="position-header">goalie</h2>
                 <!-- Aqui serão exibidos os jogadores Goalie -->
             </div>
 
-            <div class="a" id="defensePlayers">
-                <h2 class="position-header">Defenseman</h2>
+            <div id="defensePlayers">
+                <h2 class="position-header">defenseman</h2>
+                <!-- Aqui serão exibidos os jogadores Goalie -->
+            </div>
+
+            <div id="forwardPlayers">
+                <h2 class="position-header">forwards</h2>
                 <!-- Aqui serão exibidos os jogadores Goalie -->
             </div>
             
