--- a/home/index.html
+++ b/home/index.html
@@ -24,7 +24,7 @@
             <img class="enterprise-logo" src="https://cms.nhl.bamgrid.com/images/photos/298719018/150x56/cut.png">
     </header>
 
-    <main class="main">       
+    <main id="main">       
             <div id="goaliePlayers">
                 <h2 class="position-header">goalie</h2>
                 <!-- Aqui serão exibidos os jogadores Goalie -->
