--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>St. Louis Blues 2021 Roster</title>
+    <title>St. Louis Blues 2023-24 Roster</title>
     <link rel="icon" href="https://cms.nhl.bamgrid.com/images/assets/binary/309991890/binary-file/file.svg">
     <link rel="stylesheet" href="./style/home.css">
     <link rel="stylesheet" href="./style/cards.css">
