Update CSS and create nav menu

--- a/home/index.html
+++ b/home/index.html
@@ -20,8 +20,13 @@
 
     <header class="header">
             <img class="team-logo" src="https://cms.nhl.bamgrid.com/images/assets/binary/309991890/binary-file/file.svg">
-            <img class="team-name" src="https://cms.nhl.bamgrid.com/images/photos/309944758/560x32/cut.png">
+            <ul class="navbar">
+                <li><a href="https://google.com" class="navbar-li">History</a></li>
+                <li><a href="https://google.com" class="navbar-li">This Season</a></li>
+                <li><a href="https://google.com" class="navbar-li">About</a></li>
+            </ul>
             <img class="enterprise-logo" src="https://cms.nhl.bamgrid.com/images/photos/298719018/150x56/cut.png">
+            
     </header>
 
     <main id="roster" class="roster">
