--- a/home/index.html
+++ b/home/index.html
@@ -41,7 +41,7 @@
     
     <footer class="footer">
         <p class="footer-text">stlouisblues.com is the official Web site of the St Louis Blues. St Louis Blues, stlouisblues.com and stlblues.com are trademarks of the St Louis Blues Hockey Club. NHL, the NHL Shield, the word mark and image of the Stanley Cup and NHL Conference logos are registered trademarks of the National Hockey League. All NHL logos and marks and NHL team logos and marks as well as all other proprietary materials depicted herein are the property of the NHL and the respective NHL teams and may not be reproduced without the prior written consent of NHL Enterprises, L.P. Copyright &copy  St. Louis Blues Hockey Club and the National Hockey League.</p>
-        <img class="nhl-logo-footer" src="/img/NHL_logo.png">
+        <img class="nhl-logo-footer" src="/home/img/NHL_logo.png">
     </footer>
     <script src="main.js"></script>
 </body>
